<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".AddNewSong">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/addNewSong" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/insertSongTitle" />

        <Spinner
            android:id="@+id/genre_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@array/genre_spinner"
            android:entries="@array/genre_spinner"
            android:prompt="@string/genres"
            android:spinnerMode="dialog" />
        <!--TODO spinner.setPrompt("genres") -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@array/genre_spinner"
            android:hint="@string/insertSinger" />

        <Spinner
            android:id="@+id/spinner_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/ratings" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/insertReview"
            android:inputType="textMultiLine" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/duration"
            android:inputType="numberDecimal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/link_song" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveButton" />


    </LinearLayout>

</ScrollView>