<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".Search"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/searchTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D0CAD1"
            android:fontFamily="@font/slackey"
            android:gravity="center"
            android:shadowColor="@android:color/holo_red_dark"
            android:text="@string/searchTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="55sp" />

        <Spinner
            android:id="@+id/genre_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@array/genre_spinner"
            android:entries="@array/genre_spinner"
            android:prompt="@string/genres"
            android:spinnerMode="dialog" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@array/genre_spinner"
            android:hint="@string/searchForSongText"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchButton"
            android:onClick="handleSearchSong"/>




    </LinearLayout>
</ScrollView>