<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A396A5"
            android:fontFamily="@font/slackey"
            android:gravity="center"
            android:shadowColor="@android:color/holo_red_dark"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="55sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="1"
            android:src="@drawable/fly_cartoon" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@android:color/holo_blue_light"
            android:fontFamily="@font/bangers"
            android:onClick="handleClick1"
            android:shadowColor="@android:color/darker_gray"
            android:text="@string/addNewSong" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_light"
            android:fontFamily="@font/bangers"
            android:onClick="handleClick2"
            android:text="@string/createNewPlaylist" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_light"
            android:fontFamily="@font/bangers"
            android:text="@string/searchButtom" />


    </LinearLayout>
</ScrollView>